# mithril

./: AGGREGATOR_MULTICHAIN_START.md  BRANCH_README.md  Cargo.toml  ETHEREUM_IMPLEMENTATION_SUMMARY.md  FINAL_STATUS.md  HTTP_ROUTING_COMPLETE.md  IMPLEMENTATION_PLAN.md  MITHRIL_ANYWHERE_DESIGN.md  MITHRIL_ANYWHERE_SUMMARY.md  MULTICHAIN_PROGRESS_SUMMARY.md  NEXT_STEPS.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE_SUMMARY.md  PHASE_2_ETHEREUM_COMPLETE.md  PHASE_2_SIGNER_COMPLETE.md  PROGRESS_UPDATE.md  PROJECT_STATUS.md  SIGNATURE_COLLECTION_COMPLETE.md  SIGNER_ETHEREUM_COMPLETE.md  TESTNET_READINESS.md  WORK_COMPLETE.md
mithril-aggregator/: Cargo.toml
mithril-aggregator/config/: README.md  ethereum-holesky.json
mithril-aggregator/src/: configuration.rs
mithril-aggregator/src/artifact_builder/: ethereum_state_root.rs  mod.rs
mithril-aggregator/src/commands/: serve_command.rs
mithril-aggregator/src/database/: migration.rs  test_helper.rs
mithril-aggregator/src/services/: ethereum_state_root_retriever.rs  message.rs  (+3 more)
mithril-aggregator/tests/: chain_type_database_test.rs  ethereum_config_test.rs  ethereum_end_to_end_test.rs  ethereum_startup_test.rs
mithril-client-cli/src/: main.rs
mithril-client/src/: aggregator_client.rs  client.rs  ethereum_state_client.rs  lib.rs
mithril-ethereum-chain/: Cargo.toml  README.md
mithril-ethereum-chain/src/: beacon_client.rs  chain_observer.rs  errors.rs  lib.rs  test_utils.rs  types.rs
mithril-ethereum-chain/tests/: holesky_integration_test.rs  integration_test.rs  mock_integration_test.rs
mithril-signer/: Cargo.toml
mithril-signer/config/: README.md  ethereum-holesky-example.json  ethereum-mainnet-example.json
mithril-signer/src/: chain_observer_adapter.rs  chain_observer_factory.rs  lib.rs  main.rs
mithril-signer/tests/: ethereum_adapter_integration_test.rs  ethereum_config_test.rs
mithril-universal/: Cargo.toml  README.md
mithril-universal/src/: chain_observer.rs  errors.rs  lib.rs  types.rs
mithril-universal/src/adapters/: cardano.rs  mod.rs
mithril-universal/tests/: integration_test.rs
(+46 files in other folders)
